# gpds

./: .gitignore  .gitmodules  CMakeLists.txt  build_msys.cmd  build_msys.sh  license.txt  readme.md
.github/workflows/: ci.yml
demo/qt/: address.h  archiver_demo.pro  company.h  main.cpp
doc/dita/: project.xpr
doc/dita/glossary/: container.dita  glossary.dita  glossary.ditamap
doc/dita/maps/: architecture.ditamap  archiver.ditamap  archiver_xml.ditamap  archivers.ditamap  building.ditamap  classes.ditamap  integration.ditamap  keydefs.ditamap  reference.ditamap  reference_class_container.ditamap  reference_class_value.ditamap  reference_classes.ditamap  usage.ditamap  webhelp.ditamap
doc/dita/topics/: architecture_overview.dita  archiver_xml.dita  archiver_xml_design.dita  archiver_xml_settings.dita  archivers.dita  building_cmake.dita  building_download.dita  building_examples.dita  building_library_shared.dita  building_library_static.dita  building_unittests.dita  class_container.dita  classes.dita  features.dita  integration.dita  integration_application.dita  integration_cmake.dita  integration_general.dita  integration_overview.dita  integration_qt.dita  reference_class_container.dita  reference_class_container_attribute.dita  reference_class_container_design.dita  reference_class_container_entry.dita  reference_class_container_overview.dita  reference_class_container_value.dita  reference_class_value_overview.dita  reference_classes.dita  requirements.dita  terminology.dita  usage.dita  usage_nesting.dita  usage_overview.dita  what.dita  why.dita
doc/dita/webhelp/: simulton.css
doc/resources/: illustrations.afdesign
doc/uml/: model.mdj
examples/: CMakeLists.txt
examples/basic/: CMakeLists.txt  car.h  carcatalog.h  color.h  main.cpp
examples/qt/: address.h  car.h  carcatalog.h  color.h  company.h  employee.h  gds_demo.pro  gpds_demo.pro  main.cpp
examples/spdlog/: CMakeLists.txt  main.cpp
gpds/: CMakeLists.txt  archiver.hpp  archiver_xml.cpp  archiver_xml.hpp  archiver_yaml.cpp  archiver_yaml.hpp  attributes.hpp  concepts.hpp  container.hpp  error.hpp  gpds-config.cmake.in  serialize.hpp  value.cpp
lib/: CMakeLists.txt  archiver.h  archiver.pri  archiverxml.h  attributes.h  container.h  gpds-config.cmake  gpds-config.cmake.in  gpds.pri  license.txt  serialize.h  types.h  utils.h  value.cpp  value.h
lib/include/: archiver.h  archiver.hpp  archiver_xml.hpp  archiverxml.h  attributes.h  attributes.hpp  container.h  container.hpp  document.hpp  document_xml.hpp  fragment.hpp  fragment_xml.hpp  serialize.h  serialize.hpp  utils.h  utils.hpp  value.h  value.hpp
lib/include/gpds/: archiver.hpp  archiver_xml.hpp  archiver_yaml.hpp  archiverxml.h  attributes.hpp  concepts.hpp  container.h  container.hpp  document_xml.hpp  fragment.hpp  serialize.hpp  spdlog_sink.hpp  types.hpp  utils.h  utils.hpp  value.h  value.hpp
lib/src/: archiver_xml.cpp  archiver_yaml.cpp  archiverxml.cpp  attributes.cpp  container.cpp  document_xml.cpp  fragment_xml.cpp  serialize.cpp  value.cpp
src/: CMakeLists.txt  gpds.cbp  gpds.pri
src/gpds/: archiver.h  archiverxml.h  attributes.h  container.h  serialize.h  types.h  utils.h  value.h
src/include/: gpds.h  serialize.h  utils.h
src/src/: archiverxml.cpp  container.cpp  value.cpp
test/: CMakeLists.txt  mocks.hpp  test.cpp  test.h  test.hpp  test_main.cpp
test/data/: test_data_01.xml  test_data_02.xml  test_data_03.xml
test/test_suites/: 01_creating_values.cpp  02_creating_container.cpp  03_list_container.cpp  04_nesting_container.cpp  05_deserialize_booleans.cpp  06_deserialize_integer.cpp  07_deserialize_floats.cpp  08_deserialize_strings.cpp  09_deserialize_attributes.cpp  10_deserialize_container_attributes.cpp  11_serialize_and_deserialize_color.cpp  12_unexistant_value.cpp  13_get_wrong_value_type.cpp  14_value_string_conversion.cpp  15_list_order.cpp  16_addition_assignment.cpp  17_deserializing_empty_container.cpp  18_load_and_save_file.cpp  19_attributes.cpp  20_container.cpp  25_deserialize_booleans_yaml.cpp  26_deserialize_integer_yaml.cpp  27_deserialize_floats_yaml.cpp  28_deserialize_strings_yaml.cpp  29_deserialize_attributes_yaml.cpp  30_deserialize_container_attributes_yaml.cpp  37_deserializing_empty_container_yaml.cpp  38_load_and_save_file_yaml.cpp  CMakeLists.txt  attributes.cpp  cdata.cpp  color.h  container.cpp  container_creation.cpp  container_lookup.cpp  container_serialization.cpp  lists.cpp  values.cpp
test/test_suites/core/: CMakeLists.txt  addition_assignment.cpp  container.cpp  container_creation.cpp  container_lookup.cpp  error.cpp  get_wrong_value_type.cpp  nesting_container.cpp  value_string_conversion.cpp  values.cpp
test/test_suites/serdes/: CMakeLists.txt
test/test_suites/serdes/xml/: CMakeLists.txt  attributes.cpp  cdata.cpp  deserialize_attributes.cpp  deserialize_booleans.cpp  deserialize_container_attributes.cpp  deserialize_floats.cpp  deserialize_integer.cpp  deserialize_strings.cpp  deserializing_empty_container.cpp  lists.cpp  load_and_save_file.cpp  serialize_and_deserialize_color.cpp
test/test_suites/serdes/yaml/: CMakeLists.txt  deserialize_attributes.cpp  deserialize_booleans.cpp  deserialize_container_attributes.cpp  deserialize_floats.cpp  deserialize_integer.cpp  deserialize_strings.cpp  deserializing_empty_container.cpp  load_and_save_file.cpp
test/tests/: 01_creating_values.cpp  02_creating_container.cpp  03_list_container.cpp  04_nesting_container.cpp  05_deserialize_booleans.cpp  06_deserialize_integer.cpp  07_deserialize_floats.cpp  08_deserialize_strings.cpp  09_deserialize_attributes.cpp  10_deserialize_container_attributes.cpp  11_serialize_and_deserialize_color.cpp  12_unexistant_value.cpp  13_get_wrong_value_type.cpp  14_value_string_conversion.cpp  15_list_order.cpp  16_addition_assignment.cpp  17_deserializing_empty_container.cpp  18_load_and_save_file.cpp  19_xpath.cpp  color.h  test_01.cpp  test_01.h  test_02.cpp  test_02.h  test_03.cpp  test_03.h  test_04.cpp  test_05.cpp  test_06.cpp  test_07.cpp
tools/: build_msys.sh
(+7 files in other folders)
