add_executable(gpds-example)
target_sources(gpds-example
    PRIVATE
        main.cpp
        car.h
        color.h
        carcatalog.h
)
target_include_directories(gpds-example
    PRIVATE
        ${CMAKE_CURRENT_LIST_DIR}../../lib/include/
)
target_link_libraries(gpds-example
    PRIVATE
        gpds-static
)
